# moe-explainability

./: .gitignore  DESIGN.md  README.md  ROUTING_USAGE.md  UD_ANALYSIS_PLAN.md  example_lean_usage.py  explore_ud_dataset.py  pyproject.toml  setup_paths.py  test_ud_analysis.py  train_transcoder.py
experiments/: wordsim_routing_correlation.py
routing/: README.md  __init__.py  adapters.py  alignment.py  core.py  pipeline.py  process_ud.py  process_wordsim.py  utils.py
routing/examples/: example_usage.py  test_functionality.py
scripts/: analyze_clusters.py  analyze_token_distances.py  clustering.py  get_routes_ud.py  process_ud_example.py  vector_similarity.py
src/moe_explainability/analysis/: distances.py  ud_analysis.py
src/moe_explainability/datasets/: alignment.py  configs.py  processing.py  ud_processing.py
src/moe_explainability/models/: configs.py  loading.py
src/moe_explainability/routing/: extraction.py  utils.py
